--- a/lab-nathan/package.json
+++ b/lab-nathan/package.json
@@ -9,5 +9,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cowsay": "^1.1.9"
+  }
 }
